--- a/static/accounts/css/main.css
+++ b/static/accounts/css/main.css
@@ -19,7 +19,7 @@
 
 .container{
     display: grid;
-    min-height: 100vh;
+    min-height: 970px;
     background-color: white;
     background-image: url('../images/pattern_wave.png');
     background-size: 400px;
@@ -133,7 +133,7 @@
 
 #search_box{
     height: 40px;
-    width: 180px;
+    width: -webkit-fill-available;
     font-size: 15px;
     border: none;
     border-radius: 0 5px 5px 0;
@@ -151,7 +151,7 @@
 
 .content-container{
     display: grid;
-    grid-template-rows: 0.2fr 1fr;
+    grid-template-rows: auto 1fr;
     grid-row-gap: 15px;
     padding: 3%;
     border-radius: 0 30px 30px 0;
@@ -164,6 +164,7 @@
     font-size: 30px;
     color: white;
     align-items: center;
+    padding: 20px 0;
     border-bottom: 1px solid rgba(245, 245, 245, 0.089);
 }
 
@@ -180,7 +181,7 @@
     opacity: 0.7;
 }
 
-.content-inner-about{
+.content-inner-portfolio{
     display: grid;
     grid-template-rows: auto auto auto;
     grid-row-gap: 15px;
@@ -254,7 +255,7 @@ select::-ms-expand {
 
 select{
     height: 40px;
-    width: 180px;
+    width: -webkit-fill-available;
     display: inline-block;
     padding: 0.5em 2em 0.5em 0.5em;
     border: 1px solid #eee;
@@ -274,6 +275,7 @@ select{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 .projects{
@@ -353,6 +355,18 @@ select{
     .projects{
         grid-template-columns: repeat(2, 1fr);
     }
+    .content-filter{
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        grid-column-gap: 2%;
+        grid-template-rows: auto auto;
+        grid-row-gap: 20px;
+        
+    }
+
+    .searchBtn{
+        grid-column: 1/3;
+    }
 }
 
 @media (min-width:992px) and (max-width:1199px) {
@@ -363,13 +377,93 @@ select{
     .projects{
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .content-filter{
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        grid-column-gap: 2%;
+        grid-template-rows: auto auto;
+        grid-row-gap: 20px;
+        
+    }
+
+    .searchBtn{
+        grid-column: 1/3;
+    }
 }
 
-@media (min-width:450px) and (max-width:991px) {
+@media (min-width:668px) and (max-width:991px) {
+
     .container{
         height: 100%;
         grid-template-columns: none;
-        grid-template-rows: auto auto 600px;
+        grid-template-rows: auto auto auto;
+        padding: 2% 2%;
+        grid-row-gap: 10px;
+    }
+
+    .projects{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .profile{
+        grid-row: 1/2;
+    }
+
+    .container > *, .content-container{
+        border-radius: 10px !important;
+    }
+
+    .content{
+        grid-row: inherit;
+        background-color: transparent;
+    }
+
+    .navbar{
+        grid-row: 2/3;
+        height: auto;
+        margin: 0;
+    }
+    .navbar-list{
+        border-radius: 10px;
+        grid-template-rows: none;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .active{
+        border-radius: 10px;
+    }
+
+    .navbar-list a{
+        padding: 20px;
+        border-radius: 10px;
+    }
+
+    .alt{
+        font-size: 17px;
+        top: calc(100% + 5px);
+        right: auto;
+    }
+
+    .content-filter{
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        grid-column-gap: 2%;
+        grid-template-rows: auto auto;
+        grid-row-gap: 20px;
+        
+    }
+
+    .searchBtn{
+        grid-column: 1/3;
+    }
+}
+
+@media (max-width:667px){
+    .container{
+        height: 100%;
+        grid-template-columns: none;
+        grid-template-rows: auto auto auto;
         padding: 2% 2%;
         grid-row-gap: 10px;
     }
@@ -415,6 +509,19 @@ select{
         font-size: 17px;
         top: calc(100% + 5px);
         right: auto;
+    }
+
+    .content-filter{
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        grid-column-gap: 2%;
+        grid-template-rows: auto auto;
+        grid-row-gap: 20px;
+        
+    }
+
+    .searchBtn{
+        grid-column: 1/3;
     }
 }
 
