--- a/templates/accounts/portfolio.html
+++ b/templates/accounts/portfolio.html
@@ -1,15 +1,15 @@
 {% extends 'accounts/base/base.html' %}
 
-{% block title %}{{ block.super }} about{% endblock title %}
+{% block title %}{{ block.super }} Portfolio{% endblock title %}
 
-{% block mainName %} About {% endblock %}
+{% block mainName %} Portfolio {% endblock %}
 
-{% block active_about %}active{% endblock active_about %}
+{% block active_portfolio %}active{% endblock active_portfolio %}
 
 {% block content_inner %}
-<div class="content-inner content-inner-about">
+<div class="content-inner content-inner-portfolio">
     <form action="" method="get">
-        <div class="content-inner content-inner-about">
+        <div class="content-inner content-inner-portfolio">
             <div class="content-filter">
                 <div class="content-filter-item">
                     <label for='search_box' class="search-label">Search</label>
@@ -24,7 +24,7 @@
                         <option value="Hesham3">Hesham1</option>
                     </select>
                 </div>
-                <button class="noselect" style="background: #5f5f5f;"><span class='text'>Search</span><span class="icon"><i class="fas fa-search" style="color: whitesmoke;"></i></span></button>
+                <button class="searchBtn noselect" style="background: #5f5f5f;"><span class='text'>Search</span><span class="icon"><i class="fas fa-search" style="color: whitesmoke;"></i></span></button>
             </div>
         </div>
     </form>
