--- a/static/accounts/css/main.css
+++ b/static/accounts/css/main.css
@@ -133,7 +133,7 @@
 
 #search_box{
     height: 40px;
-    width: -webkit-fill-available;
+    width: inherit;
     font-size: 15px;
     border: none;
     border-radius: 0 5px 5px 0;
@@ -196,14 +196,14 @@
 
 .navbar{
     display: grid;
-    height: 370px;
+    height: 470px;
     margin-left: 15%;
     
 }
 
 .navbar-list{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
     border-radius: 30px;
@@ -427,7 +427,7 @@ select{
     .navbar-list{
         border-radius: 10px;
         grid-template-rows: none;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 
     .active{
@@ -493,7 +493,7 @@ select{
     .navbar-list{
         border-radius: 10px;
         grid-template-rows: none;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 
     .active{
