--- a/templates/accounts/base/base.html
+++ b/templates/accounts/base/base.html
@@ -59,7 +59,7 @@
           </li>
           <li class="no-list {% block active_resume %}{% endblock active_resume %}">
             <a href="{% url 'resume' %}">
-                <i class="fas fa-user"></i>
+                <i class="fas fa-bookmark"></i>
                 <div class="alt">resume</div>  
             </a>
           </li>
