--- a/static/accounts/css/main.css
+++ b/static/accounts/css/main.css
@@ -285,6 +285,12 @@ select{
     grid-gap: 35px;
 }
 
+.projects a:hover{
+    transform: scale(1.05);
+    transition: 0.1s;
+    cursor: pointer;
+}
+
 .project{
     position: relative;
     display: grid;
@@ -294,7 +300,7 @@ select{
     background-color: white;
     border-radius: 15px;
     color: #5f5f5f !important;
-    border-bottom: 4px solid red;
+    border-bottom: 4px solid #df4c73;
     padding: 60px 20px 5px 20px;
     box-shadow: 10px 10px 3px 0px rgba(0,0,0,0.15);
 }
@@ -310,11 +316,11 @@ select{
     position: absolute;
     height: 70px;
     width: 70px;
-    background-color: red;
+    background-color: #5f5f5f;
     border-radius: 50%;
     top: -20px;
     left: 20px;
-    box-shadow: 0px 15px 15px 0px rgba(255, 0, 0, 0.2);
+    box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.2);
 }
 
 .prject-footer{
@@ -340,9 +346,28 @@ select{
     white-space: nowrap;
 }
 
-
 .project-team, .project-progress{
     display: grid;
+}
+
+.team-pics{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+.team-pic{
+    display: block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.searchBtn{
+    position: relative;
 }
 /*---- Media dynamic page ----*/
 
