--- a/static/accounts/css/main.css
+++ b/static/accounts/css/main.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@font-face{
+    font-family: "Poppins";
+    src: url('../fonts/Poppins-Regular.ttf') format('truetype'),
+        url('../fonts/Poppins-SemiBold.ttf') format("truetype")
+}
 
 *,html,body{
     margin: 0;
@@ -174,11 +178,15 @@
     color: white;
 }
 
-.content-inner-home{
+.home-container{
     display: grid;
-    align-items: center;
-    justify-items: center;
-    opacity: 0.7;
+    grid-template-columns: 0.3fr 1fr;
+}
+
+.experience{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .content-inner-portfolio{
@@ -203,7 +211,7 @@
 
 .navbar-list{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
     border-radius: 30px;
@@ -369,6 +377,80 @@ select{
 .searchBtn{
     position: relative;
 }
+
+#contact_form{
+    display: flex;
+    height: fit-content;
+    gap: 30px;
+    flex-direction: column;
+}
+
+#contact_form div > span{
+    color: #df4c73;
+    list-style: inside;
+    font-size: 18px;
+}
+
+.form-inner:not(.form-inner-Content){
+    display: flex;
+    align-items: center;
+}
+
+#contact_form .form-inner > label{
+    background: #5f5f5f;
+    color: white;
+    height: 40px;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px 0 0 5px;
+    padding: 0 10px;
+    font-size: 15px;
+}
+
+.form-Content{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+}
+
+.form-inner-Content > textarea{
+    width: 380px;
+}
+
+.form-Content label{
+    border-radius: 5px 5px 0 0 !important;
+    width: 100% !important;
+    justify-content: left !important;
+}
+
+
+#contact_form div > input{
+    height: 40px;
+    min-width: 300px;
+    width: max-content;
+    font-size: 15px;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    box-shadow: 10px 10px 3px 0px rgb(0 0 0 / 15%);
+    padding: 0 5px;
+}
+
+#members{
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.image-member{
+    display: flex;
+    flex-direction: column;
+    overflow: unset;
+    justify-self: center;
+    align-items: center;
+    text-align: center;
+}
 /*---- Media dynamic page ----*/
 
 @media (min-width:1600px) {
@@ -452,7 +534,7 @@ select{
     .navbar-list{
         border-radius: 10px;
         grid-template-rows: none;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 
     .active{
@@ -481,6 +563,10 @@ select{
 
     .searchBtn{
         grid-column: 1/3;
+    }
+
+    .content-header{
+        font-size: 25px;
     }
 }
 
@@ -518,7 +604,7 @@ select{
     .navbar-list{
         border-radius: 10px;
         grid-template-rows: none;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 
     .active{
@@ -547,6 +633,21 @@ select{
 
     .searchBtn{
         grid-column: 1/3;
+    }
+
+    #contact_form{
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        width: fit-content;
+    }
+
+    .content-header{
+        font-size: 25px;
+    }
+
+    .experience{
+        justify-content: inherit;
     }
 }
 
