--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -1,13 +1,85 @@
-{% extends 'accounts/base/base.html' %}
-
-{% block title %}{{ block.super }} home{% endblock title %}
-
-{% block mainName %} Home {% endblock %}
-
-{% block active_home %}active{% endblock active_home %}
-
-{% block content_inner %}
-    <div class="content-inner content-inner-home">
-        <h1>Content Page Inner</h1>
-    </div>
-{% endblock content_inner %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../static/accounts/css/main.css">
+    <link rel="stylesheet" href="../../static/accounts/css/all.css">
+    <link rel="stylesheet" href="../../static/accounts/css/sadeen.css">
+    <title>Home</title>
+</head>
+<body>
+  <section class="container">
+      <!-- profile -->
+      <div class="profile">
+        <div class="profile-container">
+          <div class="profile-content">
+            <div class="image_profile", style="background-image: url(../media/images/Aliens.jpg);"></div>
+            <h1 class="username">Hesham@gmail.com</h1>
+            <h3 class="username-disc">A Web Developer</h3>
+            <ul class="social-media">
+              <li class="no-list"><a href="#"><i class="fab fa-telegram-plane"></i></a></li>
+              <li class="no-list"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li class="no-list"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="profile-license">
+          <h5>© 2020 All rights reserved.</h5>
+        </div>
+      </div>
+      <!-- content -->
+      <div class="content">
+        <div class="content-container">
+          <div class="content-header">
+            <h1>Home</h1>
+          </div>
+        <div class="content-inner content-inner-home">
+            <div class="home-container">
+                <div class="experience">
+                    <span class="experience-num" style="font-size: 80px; color: #df4c73">+3</span>
+                    <span>Years of Experience</span>
+                </div>
+                <div class="main-content" style="display:flex; flex-direction: column; justify-self: center; text-align: center;">
+                    <span>Hesham Mamdouh</span>
+                    <h5 class="work-at">I’m 21 Egyptian Software Engineer Entrepreneur.</h5>
+                    <p style="font-size: 18px; opacity: 0.5; margin-top: 20px">I Worked as a marketer and sales trainee within the teenagers by studying marketing & sales personally with try & error strategy in some products.
+                        Lately I started studying computer science at Nile University having the track of the software development, using different strategy in studying the content of the college while it depends on the practical way of learning in market.
+                        It helps me with the fastest way to know more about the Egyptian market by catching up opportunities, having early experience. I love GDSC & I hope to keep an effect in your life.</p>
+                </div>
+            </div>
+        </div>
+        </div>
+      </div>
+      <!-- navnar -->
+      <div class="navbar">
+        <ul class="navbar-list">
+          <li class="no-list active">
+            <a href="http://127.0.0.1:8000/">
+                <i class="fas fa-home"></i>
+                <div class="alt">home</div>  
+            </a>
+          </li>
+          <li class="no-list">
+            <a href="http://127.0.0.1:8000/resume">
+                <i class="fas fa-bookmark"></i>
+                <div class="alt">resume</div>  
+            </a>
+          </li>
+          <li class="no-list">
+            <a href="http://127.0.0.1:8000/portfolio">
+                <i class="fas fa-briefcase"></i>
+                <div class="alt">portfolio</div>  
+            </a>
+          </li>
+          <li class="no-list">
+            <a href="http://127.0.0.1:8000/contacts">
+                <i class="fas fa-phone-alt"></i>
+                <div class="alt">contacts</div>  
+            </a>
+          </li>
+        </ul>
+      </div>
+  </section>  
+</body>
+</html>
