--- a/templates/accounts/portfolio.html
+++ b/templates/accounts/portfolio.html
@@ -1,27 +1,54 @@
-{% extends 'accounts/base/base.html' %}
-
-{% block title %}{{ block.super }} Portfolio{% endblock title %}
-
-{% block mainName %} Portfolio {% endblock %}
-
-{% block active_portfolio %}active{% endblock active_portfolio %}
-
-{% block content_inner %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../../static/accounts/css/main.css">
+<link rel="stylesheet" href="../../static/accounts/css/all.css">
+<link rel="stylesheet" href="../../static/accounts/css/sadeen.css">
+<title>Portfolio</title>
+</head>
+<body>
+<section class="container">
+    <!-- profile -->
+    <div class="profile">
+    <div class="profile-container">
+        <div class="profile-content">
+        <div class="image_profile", style="background-image: url(../media/images/Aliens.jpg);"></div>
+        <h1 class="username">Hesham@gmail.com</h1>
+        <h3 class="username-disc">A Web Developer</h3>
+        <ul class="social-media">
+            <li class="no-list"><a href="#"><i class="fab fa-telegram-plane"></i></a></li>
+            <li class="no-list"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="no-list"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+        </div>
+    </div>
+    <div class="profile-license">
+        <h5>© 2020 All rights reserved.</h5>
+    </div>
+    </div>
+    <!-- content -->
+    <div class="content">
+    <div class="content-container">
+        <div class="content-header">
+        <h1>Portfolio</h1>
+        </div>
 <div class="content-inner content-inner-portfolio">
     <form action="" method="get">
         <div class="content-inner content-inner-portfolio">
             <div class="content-filter">
                 <div class="content-filter-item">
                     <label for='search_box' class="search-label">Search</label>
-                    <input type='text' id='search_box' placeholder="Search Here..." name="search" value='{{request.GET.search}}'>
+                    <input type='text' id='search_box' placeholder="Search Here..." name="search">
                 </div>
                 <div class="content-filter-item">
                     <label for='level_select' class="search-label">Level</label>
                     <select name="level_select" id="level_select">
-                        <option value="all" {% if 'all' == request.GET.level_select %}selected{% endif %}>all</option>
-                        <option value="small" {% if 'small' == request.GET.level_select %}selected{% endif %}>small</option>
-                        <option value="medium" {% if 'medium' == request.GET.level_select %}selected{% endif %}>medium</option>
-                        <option value="huge" {% if 'huge' == request.GET.level_select %}selected{% endif %}>huge</option>
+                        <option value="all">all</option>
+                        <option value="small">small</option>
+                        <option value="medium">medium</option>
+                        <option value="huge">huge</option>
                     </select>
                 </div>
                 <button class="searchBtn noselect" style="background: #5f5f5f;"><span class='text'>Search</span><span class="icon"><i class="fas fa-search" style="color: whitesmoke;"></i></span></button>
@@ -29,36 +56,63 @@
         </div>
     </form>
     <div class="projects">
-        {% for project in projects %}
-            <a href="{% url 'portfolio_view' project.pk %}" target="_blank" style="text-decoration: none;">
-                <div class="project project{{project.id}}" >
+            <a href="http://127.0.0.1:8000/portfolio/1" target="_blank" style="text-decoration: none;">
+                <div class="project">
                     <div class="project-head">
-                        <h2 class="project-title">{{project.name}}</h2>
+                        <h2 class="project-title">A Website</h2>
                         <div style="color: #5f5f5f71; font-size: 12px">
-                            <i class="far fa-clock" style="margin-right: 10px;"></i><span>{{project.finish_time|timeuntil}}</span>
+                            <i class="far fa-clock" style="margin-right: 10px;"></i><span>1 week</span>
                         </div>
                     </div>
                     <div class="prject-footer">
                         <div class="project-team">
                             <span>Team</span>
                             <span class="team-pics" style="font-size: 10px; color: #5f5f5f71;">
-                                {% if project.members.all|slice:':3' %}
-                                    {% for member in project.members.all %}
-                                    <div class="team-pic" style="background-image: url({{member.profile.avatar.url}});"></div>
-                                    {% endfor %}
-                                {% else %}
-                                    ...
-                                {% endif %}
+                                <div class="team-pic" style="background-image: url(../../media/images/Aliens.jpg);"></div>
+                                <div class="team-pic" style="background-image: url(../../media/images/astrobio_strat_plan_cover-part.jpg__1240x510_q85_crop_subsampling-2.jpg);"></div>
+
                             </span>
                         </div>
                         <div class="project-progress">
-                            <span>Progress</span>
-                            <span style="font-size: 10px; color: #5f5f5f71;">96%</span>
+                            <span>Level</span>
+                            <span style="font-size: 10px; color: #5f5f5f71;">Huge</span>
                         </div>
                     </div>
                 </div>
             </a>
-        {% endfor %}
     </div>
 </div>
-{% endblock content_inner %}
+    </div>
+    </div>
+    <!-- navnar -->
+    <div class="navbar">
+    <ul class="navbar-list">
+        <li class="no-list">
+        <a href="http://127.0.0.1:8000/">
+            <i class="fas fa-home"></i>
+            <div class="alt">home</div>  
+        </a>
+        </li>
+        <li class="no-list">
+        <a href="http://127.0.0.1:8000/resume">
+            <i class="fas fa-bookmark"></i>
+            <div class="alt">resume</div>  
+        </a>
+        </li>
+        <li class="no-list active">
+        <a href="http://127.0.0.1:8000/portfolio">
+            <i class="fas fa-briefcase"></i>
+            <div class="alt">portfolio</div>  
+        </a>
+        </li>
+        <li class="no-list">
+        <a href="http://127.0.0.1:8000/contacts">
+            <i class="fas fa-phone-alt"></i>
+            <div class="alt">contacts</div>  
+        </a>
+        </li>
+    </ul>
+    </div>
+</section>  
+</body>
+</html>
