--- a/templates/accounts/resume.html
+++ b/templates/accounts/resume.html
@@ -1,87 +1,150 @@
-{% extends 'accounts/base/base.html' %}
-
-{% block title %}{{ block.super }} home{% endblock title %}
-
-{% block mainName %} Resume {% endblock %}
-
-{% block active_resume %}active{% endblock active_resume %}
-
-{% block content_inner %}
-<div class="content-inner">
-    <h3 class="heading">Experience</h3>
-    <div class="content-inner-experience">
-        <div>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-            <div class="border-left margin-left-1 padding-right-1">
-
-                <h4>Django Developer</h4>
-                <h5 class="work-at">GDSC</h5>
-                <p class="about-work">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
-                    saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
-                    obcaecati accusantium, magnam quae. Illo!
-                </p>
-            </div>
-            </p>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../../static/accounts/css/main.css">
+<link rel="stylesheet" href="../../static/accounts/css/all.css">
+<link rel="stylesheet" href="../../static/accounts/css/sadeen.css">
+<title>Resume</title>
+</head>
+<body>
+<section class="container">
+    <!-- profile -->
+    <div class="profile">
+    <div class="profile-container">
+        <div class="profile-content">
+        <div class="image_profile", style="background-image: url(../media/images/Aliens.jpg);"></div>
+        <h1 class="username">Hesham@gmail.com</h1>
+        <h3 class="username-disc">A Web Developer</h3>
+        <ul class="social-media">
+            <li class="no-list"><a href="#"><i class="fab fa-telegram-plane"></i></a></li>
+            <li class="no-list"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="no-list"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
         </div>
     </div>
-    <div class="content-inner-experience">
-        <div>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-            <div class="border-left margin-left-1 padding-right-1">
+    <div class="profile-license">
+        <h5>© 2020 All rights reserved.</h5>
+    </div>
+    </div>
+    <!-- content -->
+    <div class="content">
+    <div class="content-container">
+        <div class="content-header">
+        <h1>Resume</h1>
+        </div>
+    <div class="content-inner">
+        <h3 class="heading">Experience</h3>
+        <div class="content-inner-experience">
+            <div>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+                <div class="border-left margin-left-1 padding-right-1">
 
-                <h4>Django Developer</h4>
-                <h5 class="work-at">GDSC</h5>
-                <p class="about-work">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
-                    saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
-                    obcaecati accusantium, magnam quae. Illo!
+                    <h4>Django 2 years</h4>
+                    <h5 class="work-at">GDSC</h5>
+                    <p class="about-work">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
+                        saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
+                        obcaecati accusantium, magnam quae. Illo!
+                    </p>
+                </div>
                 </p>
-            </div>
-            </p>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
 
+            </div>
+        </div>
+        <div class="content-inner-experience">
+            <div>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+                <div class="border-left margin-left-1 padding-right-1">
+
+                    <h4>Django Developer</h4>
+                    <h5 class="work-at">GDSC</h5>
+                    <p class="about-work">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
+                        saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
+                        obcaecati accusantium, magnam quae. Illo!
+                    </p>
+                </div>
+                </p>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+
+            </div>
+        </div>
+        <hr />
+        <h3 class="heading">Education</h3>
+        <div class="content-inner-experience">
+            <div>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+                <div class="border-left margin-left-1 padding-right-1">
+
+                    <h4>ECE at Nile University</h4>
+                    <h5 class="work-at">GDSC</h5>
+                    <p class="about-work">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
+                        saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
+                        obcaecati accusantium, magnam quae. Illo!
+                    </p>
+                </div>
+                </p>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+
+            </div>
+        </div>
+        <hr/>
+        <h3 class="heading">Volunteering</h3>
+
+        <div class="content-inner-experience">
+            <div>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+                <div class="border-left margin-left-1 padding-right-1">
+
+                    <h4>GDSC Club</h4>
+                    <h5 class="work-at">GDSC</h5>
+                    <p class="about-work">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
+                        saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
+                        obcaecati accusantium, magnam quae. Illo!
+                    </p>
+                </div>
+                </p>
+                <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
+
+            </div>
         </div>
     </div>
-    <hr />
-    <h3 class="heading">Education</h3>
-    <div class="content-inner-education">
-        <div>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-            <div class="border-left margin-left-1 padding-right-1">
-
-                <h4>Django Developer</h4>
-                <h5 class="work-at">GDSC</h5>
-                <p class="about-work">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
-                    saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
-                    obcaecati accusantium, magnam quae. Illo!
-                </p>
-            </div>
-            </p>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-
-        </div>
     </div>
-    <div class="content-inner-education">
-        <div>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-            <div class="border-left margin-left-1 padding-right-1">
-
-                <h4>Django Developer</h4>
-                <h5 class="work-at">GDSC</h5>
-                <p class="about-work">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nostrum repudiandae excepturi
-                    saepe neque eius at distinctio reiciendis blanditiis odio. Rem itaque blanditiis provident et
-                    obcaecati accusantium, magnam quae. Illo!
-                </p>
-            </div>
-            </p>
-            <span class="large-text date"><i class="far fa-calendar-alt "></i> 2020</span>
-
-        </div>
     </div>
-</div>
-{% endblock content_inner %}
+    <!-- navnar -->
+    <div class="navbar">
+    <ul class="navbar-list">
+        <li class="no-list">
+        <a href="http://127.0.0.1:8000/">
+            <i class="fas fa-home"></i>
+            <div class="alt">home</div>  
+        </a>
+        </li>
+        <li class="no-list active">
+        <a href="http://127.0.0.1:8000/resume">
+            <i class="fas fa-bookmark"></i>
+            <div class="alt">resume</div>  
+        </a>
+        </li>
+        <li class="no-list">
+        <a href="http://127.0.0.1:8000/portfolio">
+            <i class="fas fa-briefcase"></i>
+            <div class="alt">portfolio</div>  
+        </a>
+        </li>
+        <li class="no-list">
+        <a href="http://127.0.0.1:8000/contacts">
+            <i class="fas fa-phone-alt"></i>
+            <div class="alt">contacts</div>  
+        </a>
+        </li>
+    </ul>
+    </div>
+</section>  
+</body>
+</html>
